--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,2 +1,17 @@
-/* #root {
-} */
+#root {
+    height: 100%;
+}
+
+.app {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 8px;
+    list-style: none;
+}
