--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url('/src/assets/images/hogwarts-legacy.jpg');
+    background-size: cover;
 }
 
 .cards-container {
