--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,6 +15,10 @@
 .cards-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 8px;
+    padding: 24px;
+    border-radius: 12px;
+    gap: 24px;
     list-style: none;
+    background-color: rgba(106, 106, 106, 0.102);  
+    backdrop-filter: blur(20px);
 }
