--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,18 +7,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-image: url('/src/assets/images/hogwarts-legacy.jpg');
     background-size: cover;
 }
 
 .cards-container {
+    width: min(100%, 1110px);
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(196px, 1fr));
+    /* grid-template-columns: repeat(4, 1fr); */
+    /* grid-template-rows: repeat(3, 20%); */
     padding: 24px;
-    border-radius: 12px;
+    border-radius: 10px;
     gap: 24px;
     list-style: none;
-    background-color: rgba(106, 106, 106, 0.102);  
-    backdrop-filter: blur(20px);
 }
