--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,23 +1,70 @@
 .card {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    height: 360px;
+    border-radius: 6px;
+    background-color: #000;
+}
+
+.card:hover {
+    cursor: pointer;
+
 }
 
 .card-btn {
-    padding: 48px 24px;
-    border-radius: 8px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    border-radius: 6px;
     outline: none;
     border: none;
     font-family: var(--font-family);
-    font-size: 1.2rem;
-    background-color: rgba(173, 173, 173, 0.15);
-    backdrop-filter: blur(5px);
-    opacity: 0.7;
-    transition: transform 0.01s;
+    font-size: 1rem;
+    background-position: center;
+    background-size: cover;
+    color: #fff;
+    opacity: 0.8;
+    transition: transform 0.1s ease-in-out, opacity 0.1s ease-out;
 }
 .card-btn:hover {
     cursor: pointer;
     opacity: 1;
-    transform: scale(1.1);
+    transform: scale(1.05);
+}
+
+.card-btn__info-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 8px;
+    border-radius: 0px 0px 6px 6px;
+    background-color: rgba(114, 102, 85, 0.8);
+    backdrop-filter: blur(8px);
+    pointer-events: none;
+}
+
+.card-btn__primary-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+    border-bottom: 1px solid rgba(114, 102, 85, 1);
+}
+
+.card-btn__birth-year {
+    font-style: italic;
+}
+
+.card-btn__secondary-info {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.card-btn__secondary-info li span {
+    font-weight: 600;
 }
