--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -50,7 +50,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: left;
-    border-bottom: 1px solid rgb(164, 156, 145);
+    border-bottom: 1px solid #a49c91;
 }
 
 .card-btn__birth-year {
