--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -2,9 +2,10 @@
     display: flex;
     gap: 24px;
     padding: 24px;
-    font-size: 1.8rem;
-    width: 100%;
+    border-radius: 8px;
     justify-content: center;
-    background-color: rgba(106, 106, 106, 0.102);  
+    background-color: rgb(62, 53, 63, 0.9);
     backdrop-filter: blur(20px);
+    font-size: 1.8rem;
+    font-weight: 600;
 }
