--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -1,11 +1,23 @@
 .scoreboard {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
     padding: 24px;
     border-radius: 8px;
+    border: 4px solid #a49c91;
     justify-content: center;
-    background-color: rgb(62, 53, 63, 0.9);
-    backdrop-filter: blur(20px);
+    background-color: #3e353f;
+}
+
+.scoreboard__score-container {
+    display: flex;
+    gap: 24px;
     font-size: 1.8rem;
     font-weight: 600;
+    border-bottom: 2px solid #a49c91;
+}
+
+.scoreboard__game-rules {
+    font-size: 1.2rem;
 }
