--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -21,7 +21,7 @@
     font-size: 1rem;
     background-position: top;
     background-size: cover;
-    color: #fff;
+    color: var(--font-color);
     opacity: 0.8;
     transition: transform 0.1s ease-in-out, opacity 0.1s ease-out;
 }
@@ -38,7 +38,7 @@
     flex-direction: column;
     padding: 8px;
     border-radius: 0px 0px 6px 6px;
-    background-color: rgba(33, 45, 42, 0.8);
+    background-color: var(--secondary-bg-color);
     backdrop-filter: blur(8px);
     pointer-events: none;
 }
