--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -5,9 +5,9 @@
     gap: 8px;
     padding: 24px;
     border-radius: 8px;
-    border: 4px solid #a49c91;
+    border: 4px solid var(--border-color);
     justify-content: center;
-    background-color: #3e353f;
+    background-color: var(--primary-bg-color);
 }
 
 .scoreboard__score-container {
@@ -15,7 +15,7 @@
     gap: 24px;
     font-size: 1.8rem;
     font-weight: 600;
-    border-bottom: 2px solid #a49c91;
+    border-bottom: 2px solid var(--border-color);
     text-align: center;
 }
 
