--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -5,26 +5,25 @@
     background-color: #000;
 }
 
-.card:hover {
-    cursor: pointer;
-}
-
 .card-btn {
+    outline: none;
+    border: none;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: end;
     border-radius: 6px;
-    outline: none;
-    border: none;
     font-family: var(--font-family);
     font-size: 1rem;
     background-position: top;
     background-size: cover;
     color: var(--font-color);
     opacity: 0.8;
-    transition: transform 0.1s ease-in-out, opacity 0.1s ease-out;
+    transition:
+        transform 0.1s ease-in-out,
+        opacity 0.1s ease-out;
 }
+
 .card-btn:hover {
     cursor: pointer;
     opacity: 1;
@@ -49,7 +48,7 @@
     justify-content: space-between;
     align-items: end;
     text-align: left;
-    border-bottom: 1px solid #a49c91;
+    border-bottom: 1px solid var(--border-color);
 }
 
 .card-btn__primary-info .card-btn__birth-year {
@@ -59,8 +58,8 @@
 
 .card-btn__secondary-info {
     margin-top: 4px;
-    width: 100%;
     list-style: none;
+    width: 100%;
     display: flex;
     flex-direction: column;
     text-align: left;
